# moar_ants

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: release.yaml
assets/: credits_mockup.aseprite  food_poot.aseprite  help-mockup.aseprite  licenses_and_attributions.txt  main_menu_mock.aseprite  mockup-export.aseprite  settings_mockup.aseprite
assets/nine_slice/: bgW_bB_soft_corner_lower_left_trimmed_inner.aseprite
src/: ant.rs  app_settings.rs  buildables.rs  colony.rs  credits_ui.rs  food.rs  gamefield_ui.rs  gametimer.rs  gizmodable.rs  larva.rs  main.rs  menu_ui.rs  misc_utility.rs  playerinput.rs  scentmap.rs  settings_menu.rs  spatial_helper.rs  spawner.rs  ui_helpers.rs  upgrades.rs
src/nav/: mod.rs
src/ui/: credits_ui.rs  gamefield_ui.rs  menu_ui.rs  mod.rs  settings_menu.rs  ui_util.rs  upgrades.rs
